# llm-mock-api

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
example/: config.json
example/rules/: advanced.json5  basic.json5  processor.py  sequence.json5  times_and_errors.json5
src/llm_mock_api/: __init__.py  cli.py  history.py  loader.py  logger.py  mock_server.py  route_handler.py  rule_builder.py  rule_engine.py  sse_writer.py
src/llm_mock_api/formats/: __init__.py  request_helpers.py  serialize_helpers.py  types.py
src/llm_mock_api/formats/anthropic/: __init__.py  parse.py  schema.py  serialize.py
src/llm_mock_api/formats/openai/: __init__.py
src/llm_mock_api/formats/openai/chat_completions/: __init__.py  parse.py  schema.py  serialize.py
src/llm_mock_api/formats/openai/responses/: __init__.py  parse.py  schema.py  serialize.py
src/llm_mock_api/types/: __init__.py  reply.py  request.py  rule.py
tests/: test_formats.py  test_loader.py  test_logger.py  test_mock_server.py  test_mock_server_integration.py  test_openai_client_e2e.py  test_route_handler.py  test_rule_builder.py  test_rule_engine.py
