[project]
name = "llm-mock-api"
version = "0.1.0"
description = "一个用于测试的 Mock LLM 服务器，支持 OpenAI、Anthropic 和 Responses API 格式"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ray3417" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.15.0",
    "json5>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Ray3417/llm-mock-api"
Repository = "https://github.com/Ray3417/llm-mock-api"
Changelog = "https://github.com/Ray3417/llm-mock-api/blob/main/CHANGELOG.md"

[project.scripts]
llm-mock-api = "llm_mock_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_mock_api"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["empty-body"]

[tool.pytest.ini_options]
# pytest-asyncio: auto 模式自动识别 async def 测试；session scope 让 server 在同一循环中运行
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "openai>=1.50.0",
]
